Code review and small improvements.